fix: fix anchor visibility

--- a/src/styles/main/friends.scss
+++ b/src/styles/main/friends.scss
@@ -9,6 +9,13 @@
   animation: spin 1s infinite linear;
 }
 
+.invisible-anchor{
+	visibility:hidden	
+}
+.visible-anchor{
+	visibility: visible;
+}
+
 .friends {
 	background: var(--light-l);
 	text-align: center;
